fix: music page letter spacing

--- a/styles/works/music.module.scss
+++ b/styles/works/music.module.scss
@@ -33,6 +33,7 @@
         font-size: 12px;
         font-weight: 500;
         margin-bottom: 1px;
+        letter-spacing: 1.44px;
       }
       .title {
         font-size: 30px;
@@ -41,6 +42,9 @@
       }
       .feat {
         margin-top: 21px;
+        font-size: 12px;
+        font-weight: 500;
+        letter-spacing: 1.44px;
       }
       .media {
         position: absolute;
@@ -50,6 +54,10 @@
       .list {
         position: absolute;
         top: 286px;
+        line-height: 1.61;
+        letter-spacing: 0.93px;
+        font-size: 15px;
+        font-weight: 500;
       }
     }
   }
@@ -95,6 +103,7 @@
           font-size: 12px;
           font-weight: 300;
           margin-top: 6px;
+          letter-spacing: 0.72px;
         }
       }
     }
